# toggl-cli

./: Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: draft_release.yml  pull_request.yml  release_publish.yml  rust.yml  tag.yml
pkg/: autodoc.rs
pkg/scoop/: toggl-cli.json
src/: api.rs  arguments.rs  constants.rs  credentials.rs  error.rs  main.rs  models.rs  parcel.rs  utilities.rs
src/api/: client.rs  models.rs
src/commands/: auth.rs  cont.rs  create_project.rs  create_tag.rs  delete.rs  delete_project.rs  delete_tag.rs  edit.rs  list.rs  mod.rs  rename_project.rs  rename_tag.rs  running.rs  start.rs  stop.rs
src/config/: active.rs  get.rs  init.rs  locate.rs  manage.rs  mod.rs  model.rs  parser.rs
src/config/fixtures/: base.toml  complex.toml  default.toml
src/fixtures/config/: base.toml
src/picker/: fzf.rs  mod.rs  skim.rs
