[package]
name = "toggl-cli"
version = "0.1.0"
authors = ["William Barbosa <heytherewill@gmail.com>"]
edition = "2018"

[dependencies]
# Argument parsing
clap = "2.27.1"
structopt = { version = "0.3" }
colored = "2.0.0"

# Storage
keyring = "0.10.1"

# API
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13.0"

# Models
chrono = { version = "0.4.19", features = ["serde"] }
