[package]
name = "toggl"
version = "0.1.0"
authors = ["William Barbosa <heytherewill@gmail.com>"]
edition = "2021"

[dependencies]
# Argument parsing
structopt = { version = "0.3" }

# Terminal utilities
colored = "2.0.0"

# Storage
keyring = "2"

# API
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.13.1"
async-trait = "0.1.68"

# Models
chrono = { version = "0.4.24", features = ["serde"] }
itertools = "0.10.5"

[target.'cfg(unix)'.dependencies]
skim = "0.9.4"

[dev-dependencies]
# Testing
mockall = "0.9.1"
tokio-test = "0.4.2"
