[package]
name = "toggl"
version = "0.4.4"
authors = [
  "Shantanu Raj <s@sraj.me>",
  "Tyler <tylerchc92@gmail.com>",
  "William Barbosa <heytherewill@gmail.com>"
]
categories = [
  "api-bindings",
  "command-line-utilities",
  "date-and-time",
]
description = "Unofficial command-line interface for Toggl Track using the v9 API."
homepage = "https://toggl.com/track"
keywords = ["cli", "time", "time-tracking", "toggl", "track"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/watercooler-labs/toggl-cli"
edition = "2021"

[dependencies]
# Argument parsing
structopt = { version = "0.3" }

# Terminal utilities
colored = "2.0.0"
colors-transform = "0.2.11"

# Storage
keyring = { version = "2", features = ["linux-default-keyutils"] }

# Config
directories = "5.0.0"
lazy_static = "1.4.0"
regex = "1.7.3"
toml = "0.7.3"

# API
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
base64 = "0.21.0"
async-trait = "0.1.68"

# Models
chrono = { version = "0.4.24", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
skim = "0.10.4"

[dev-dependencies]
# Testing
mockall = "0.11.4"
tokio-test = "0.4.2"
